// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemSubtitle /> displays subtitle 1`] = `
<span
  data-testid="itemSubtitle"
>
  Yes, really! Really really!
</span>
`;

exports[`<ItemSubtitle /> displays subtitle with link 1`] = `
<span
  data-testid="itemSubtitle"
>
  Quack quack
</span>
`;

exports[`<ItemSubtitle /> handles no data 1`] = `null`;
